sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:6: error: not found: value i
  };i=0
    ^AlgCombSort:7: error: not found: value i
  while(i+ecart<getNombreValeurs()) {
        ^AlgCombSort:8: error: not found: value i
    if (plusPetit(i+ecart,i)) {
                  ^AlgCombSort:8: error: not found: value i
    if (plusPetit(i+ecart,i)) {
                          ^AlgCombSort:9: error: not found: value i
      echange(i+ecart,i)
              ^AlgCombSort:9: error: not found: value i
      echange(i+ecart,i)
                      ^AlgCombSort:10: error: not found: value i
    };i+=1
      ^